# sem3_lab2_c--

./: CMakeLists.txt  lab2.cpp  test.cpp
.github/workflows/: release.yml
